--- a/app/styles/partials/_buttons.scss
+++ b/app/styles/partials/_buttons.scss
@@ -3,7 +3,7 @@
     border-radius: $border-radius;
     font-size: 16px;
     height: $height;
- 
+    color:black;
     &:focus {
         outline: none;
     }
