--- a/app/styles/partials/_flip-cards.scss
+++ b/app/styles/partials/_flip-cards.scss
@@ -6,22 +6,28 @@
 }
 
 /* flip speed goes here */
-@mixin flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
-	position: relative;
-    text-align: center;
-    font-size: x-large;
-    background-color: darkkhaki;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+@mixin flipper($borderColor:null,$bgColor:null) {
     align-items: center;
+    background-color: $bgColor;
+    border:$borderColor solid 1px;
+    display: flex;
+    font-size: x-large;
+    height: 100%;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+    transform-style: preserve-3d;
+    transition: 0.6s;
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */  
 }
 
 /* hide back of pane during swap */
 @mixin hideBack {
 	backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     position: absolute;
 }
 
